updated docu